kubernetes/prod/app-prod-deployment-flask.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-prod-deployment-flask
  labels:
    app: wave-data-analysis
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: wave-data-analysis
  template:
    metadata: 
      labels: 
        app: wave-data-analysis
    spec:
      containers:
        - name: flask-api
          image: lukevenk1/wave-data-analysis:1.0
          imagePullPolicy: Always
          command: ["python", "src/flask_api.py"]
          ports:
            - name: http
              containerPort: 5000
...
