kubernetes/prod/app-prod-deployment-worker.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-prod-deployment-worker
  labels:
    app: wave-data-analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wave-data-analysis
  template:
    metadata:
      labels: 
        app: wave-data-analysis
    spec:
      containers:
        - name: worker
          image: lukevenk1/wave-data-analysis:1.0
          command: ["python", "src/worker.py"]
...
