kubernetes/prod/app-prod-service-nodeport-flask.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-prod-service-nodeport-flask
spec:
  type: NodePort
  selector:
    app: wave-data-analysis
  ports:
    - name: flask-api-nodeport
      protocol: TCP
      port: 5000
      targetPort: 5000
...
