kubernetes/prod/app-prod-service-redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-prod-service-redis
spec:
  type: ClusterIP
  selector:
    app: wave-data-analysis
  ports:
    - name: redis-cluster
      port: 6379
      targetPort: 6379
...
